[gd_scene load_steps=2 format=3 uid="uid://k7sivs86tf00"]

[ext_resource type="Script" uid="uid://dlqq4fcg17ex" path="res://level_result.gd" id="1_s1gyd"]

[node name="levelResult" type="CanvasLayer"]
script = ExtResource("1_s1gyd")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.49019608)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "LEVEL DONE"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 4

[node name="coinEarned" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "test"
horizontal_alignment = 1
vertical_alignment = 1

[node name="time" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "test"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="restart" type="Button" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(115, 30)
layout_mode = 2
action_mode = 0
text = "RESTART
"

[node name="next" type="Button" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(115, 30)
layout_mode = 2
action_mode = 0
text = "NEXT"

[connection signal="pressed" from="MarginContainer/VBoxContainer2/HBoxContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/HBoxContainer/next" to="." method="_on_next_pressed"]
